--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-player": "^2.11.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
     "react-slick": "^0.29.0",
+    "react-transition-group": "^4.4.5",
     "reactstrap": "^9.1.4",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
